Add highlighting for News section

--- a/PlanspielWeb/Views/News/Index.cshtml
+++ b/PlanspielWeb/Views/News/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Nachrichten";
     ViewData["Container"] = "container-fluid";
+    ViewData["current"] = "news";
 }
 
 <div class="card" style="margin-bottom: 25px;">
