Comment out share value code; Set news text to justify

--- a/PlanspielWeb/Views/News/Index.cshtml
+++ b/PlanspielWeb/Views/News/Index.cshtml
@@ -69,7 +69,7 @@
                     <a asp-action="Delete" asp-route-id="@kvp.Value.Id">Delete</a>
                 }
             </h3>
-            <p class="card-text">
+            <p class="card-text justify">
                 @Html.Raw(kvp.Value.Content)
             </p>
         </div>
