--- a/PlanspielWeb/Views/_ViewImports.cshtml
+++ b/PlanspielWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using PlanspielWeb
 @using PlanspielWeb.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, PlanspielWeb
